# NeuroSync

./: README.md  __init__,py.py  eeg_kuramoto.txt  project_structure.txt  pyproject.toml  setup.py  test_analytics_output.txt  test_output_2.txt  test_pipeline_output.txt  test_results.txt
analysis/: __init__.py  closed_loop.py  critical_sync.py  statistics.py
cerebral_flow/: __init__.py
cerebral_flow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cerebral_flow/analytics/: __init__.py  advanced_metrics.py  closed_loop.py  critical_sync.py  statistics.py  surrogates.py
cerebral_flow/common/: __init__.py  metrics.py  plotting.py
cerebral_flow/signals/: __init__.py  comparator.py  data_inversion.py  generator.py
cerebral_flow/simulation/: __init__.py  kuramoto.py  neural_mass.py  time_varying.py
eeg/: __init__.py  comparator.py  data_inversion.py  generator.py
examples/: __init__.py  run_pipeline.py
models/: __init__.py  kuramoto.py  neural_mass.py  time_varying.py
tests/: test_analytics.py  test_pipeline.py
utils/: __init__.py  metrics.py  plotting.py
