[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebral_flow"
version = "0.1.0"
description = "CerebralFlow: Neural Dynamics Simulation Framework"
authors = [
  { name = "CerebralFlow Team", email = "contact@cerebralflow.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=0.23.0",
    "networkx>=2.5.0",
    "pandas>=1.1.0",
    "mne>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cerebral_flow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"
